unpackaged/pre/first/objects/School__c.object
<CustomObject>
    <fields>
        <fullName>Address_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_FIPS__c</fullName>
        <label>County FIPS</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Schools</relationshipLabel>
        <relationshipName>Schools</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Free_Lunch__c</fullName>
        <label>Free Lunch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Grade__c</fullName>
        <label>High Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lat_Lng_Format_Address__c</fullName>
        <formula>Street_Address__c + &quot;, &quot; + City__c + &quot;, &quot; + Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lat Lng Format Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>IF(
 AND(
  OR(
   TEXT(Low_Grade__c)=&quot;PK&quot;,
   TEXT(Low_Grade__c)=&quot;KG&quot;
  ),
  OR(
   TEXT(High_Grade__c)=&quot;PK&quot;,
   TEXT(High_Grade__c)=&quot;KG&quot;
  )
 ),
 &quot;EEC&quot;,
 IF(
  AND(
   OR(
    TEXT(Low_Grade__c)=&quot;PK&quot;,
    TEXT(Low_Grade__c)=&quot;KG&quot;,
    AND(
     ISNUMBER(TEXT(Low_Grade__c)),
     VALUE(TEXT(Low_Grade__c))&lt;4
    )
   ),
   AND(
    ISNUMBER(TEXT(High_Grade__c)),
    VALUE(TEXT(High_Grade__c))&lt;9
   )
  ),
  &quot;Elementary&quot;,
  IF(
   AND(
    AND(
     ISNUMBER(TEXT(Low_Grade__c)),
     VALUE(TEXT(Low_Grade__c))&gt;4,
     VALUE(TEXT(Low_Grade__c))&lt;8
    ),
    AND(
     ISNUMBER(TEXT(High_Grade__c)),
     VALUE(TEXT(High_Grade__c))&lt;10
    )
   ),
   &quot;Intermediate/Middle&quot;,
   IF(
    AND(
     ISNUMBER(TEXT(Low_Grade__c)),
     VALUE(TEXT(Low_Grade__c))&gt;8,
     VALUE(TEXT(High_Grade__c))&gt;8
    ),
    &quot;High&quot;,
    &quot;&quot;
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale_Code__c</fullName>
        <label>Locale Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <formula>CASE(Locale_Code__c,
&quot;11&quot;,&quot;City:Large&quot;,
&quot;13&quot;,&quot;City:Small&quot;,
&quot;21&quot;,&quot;Suburb:Large&quot;,
&quot;23&quot;,&quot;Suburb:Small&quot;,
&quot;31&quot;,&quot;Town:Fringe&quot;,
&quot;32&quot;,&quot;Town:Distant&quot;,
&quot;41&quot;,&quot;Rural:Fringe&quot;,
&quot;42&quot;,&quot;Rural:Distant&quot;,
&quot;43&quot;,&quot;Rural:Remote&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Grade__c</fullName>
        <label>Low Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Magnet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magnet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCES_District_ID__c</fullName>
        <formula>District__r.NCES_District_ID__c</formula>
        <label>NCES District ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCES_School_ID__c</fullName>
        <externalId>true</externalId>
        <label>NCES School ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities_to_Serve__c</fullName>
        <label>Opportunities to Serve</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After-School</fullName>
                </value>
                <value>
                    <fullName>Book drives</fullName>
                </value>
                <value>
                    <fullName>Christmas gifts</fullName>
                </value>
                <value>
                    <fullName>Clothing/Food Drives</fullName>
                </value>
                <value>
                    <fullName>College &amp; Financial Aid App. Assistance</fullName>
                </value>
                <value>
                    <fullName>Community in Service</fullName>
                </value>
                <value>
                    <fullName>ESL</fullName>
                </value>
                <value>
                    <fullName>Facilities Usage</fullName>
                </value>
                <value>
                    <fullName>Financial Support</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>Guest speakers</fullName>
                </value>
                <value>
                    <fullName>Immigration paperwork help</fullName>
                </value>
                <value>
                    <fullName>In-Kind Donations</fullName>
                </value>
                <value>
                    <fullName>Kids Hope Mentoring</fullName>
                </value>
                <value>
                    <fullName>Library Volunteers</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Parent/Community Volunteers</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>PTO Support</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Student Ministry</fullName>
                </value>
                <value>
                    <fullName>Teacher Appreciation</fullName>
                </value>
                <value>
                    <fullName>Teacher Support &amp; Appreciation</fullName>
                </value>
                <value>
                    <fullName>Tutoring</fullName>
                </value>
                <value>
                    <fullName>WatchDogs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reduced_Lunch__c</fullName>
        <label>Reduced Lunch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_District_ID__c</fullName>
        <formula>District__r.State_District_ID__c</formula>
        <label>State District ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_School_ID__c</fullName>
        <externalId>true</externalId>
        <label>State School ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&quot;TX&quot;</defaultValue>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Teacher_Ratio__c</fullName>
        <formula>IF(AND(NOT(ISNULL(Students__c)), NOT(ISNULL(Teachers__c)), Teachers__c &lt;&gt; 0), (Students__c/Teachers__c),null)</formula>
        <label>Student Teacher Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Students__c</fullName>
        <label>Students</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teachers__c</fullName>
        <label>Teachers</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_1_School_Wide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title 1 School Wide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_I_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title I School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>School</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NCES_School_ID__c</columns>
        <columns>District__c</columns>
        <columns>Low_Grade__c</columns>
        <columns>High_Grade__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EEC_Schools</fullName>
        <columns>NAME</columns>
        <columns>NCES_School_ID__c</columns>
        <columns>District__c</columns>
        <columns>Low_Grade__c</columns>
        <columns>High_Grade__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>EEC</value>
        </filters>
        <label>EEC Schools</label>
    </listViews>
    <listViews>
        <fullName>Elementary_Schools</fullName>
        <columns>NAME</columns>
        <columns>NCES_School_ID__c</columns>
        <columns>District__c</columns>
        <columns>Low_Grade__c</columns>
        <columns>High_Grade__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>Elementary</value>
        </filters>
        <label>Elementary Schools</label>
    </listViews>
    <listViews>
        <fullName>High_Schools</fullName>
        <columns>NAME</columns>
        <columns>NCES_School_ID__c</columns>
        <columns>District__c</columns>
        <columns>Low_Grade__c</columns>
        <columns>High_Grade__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <label>High Schools</label>
    </listViews>
    <listViews>
        <fullName>Intermediate_Middle_Schools</fullName>
        <columns>NAME</columns>
        <columns>NCES_School_ID__c</columns>
        <columns>District__c</columns>
        <columns>Low_Grade__c</columns>
        <columns>High_Grade__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level__c</field>
            <operation>equals</operation>
            <value>Intermediate/Middle</value>
        </filters>
        <label>Intermediate/Middle Schools</label>
    </listViews>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <recordTypes>
        <fullName>Private_School</fullName>
        <active>true</active>
        <label>Private School</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_School</fullName>
        <active>true</active>
        <label>Public School</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>